--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,35 +1,38 @@
 @charset "UTF-8";
 
 // 1. Configuration and helpers
-@import
-  'abstracts/variables',
-  'abstracts/functions',
-  'abstracts/mixins';
+@import "1-abstracts/variables";
+@import "1-abstracts/functions";
+@import "1-abstracts/mixins";
 
 // 2. Vendors
-@import
-  'vendors/normalize';
+@import "2-vendors/normalize";
+@import "2-vendors/boostrap";
 
 // 3. Base stuff
-@import
-  'base/base',
-  'base/fonts',
-  'base/typography',
-  'base/helpers';
+@import "3-base/base";
+@import "3-base/fonts";
+@import "3-base/helpers";
+@import "3-base/reset";
+@import "3-base/typography";
 
 // 4. Layout-related sections
-@import
-  'layout/header',
-  'layout/footer';
+@import "4-layout/grid";
+@import "4-layout/navigation";
+@import "4-layout/header";
+@import "4-layout/sidebar";
+@import "4-layout/footer";
 
 // 5. Components
-@import
-  'components/button';
+@import "5-components/button";
+@import "5-components/card";
+@import "5-components/carousel";
 
 // 6. Page-specific styles
-@import
-  'pages/home';
+@import "6-pages/home";
+@import "6-pages/landing-page";
+@import "6-pages/apis";
+@import "6-pages/crud";
 
 // 7. Themes
-@import
-  'themes/default';
+@import "7-themes/default";
