--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,71 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/* Remove default padding margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  padding: 0;
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a class attribute */
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* Make images easier to work with */
+img {
+  max-width: 100%;
+  display: block;
+}
+
 /**
  * Basic typography style for copy text
  */
-header h1 {
-  font-size: 50px;
-  color: blue;
+body {
+  color: #ffffff;
+}
+
+.container {
+  margin: 2rem 3rem 0 3rem;
 }
 
 .header {
-  background-image: url("/img/background-image.jpg");
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(102, 7, 8, 0.9)), to(rgba(229, 56, 59, 0.5))), url("/img/background-img.jpg");
+  background-image: linear-gradient(to right bottom, rgba(102, 7, 8, 0.9), rgba(229, 56, 59, 0.5)), url("/img/background-img.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 95vh;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0% 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 75%, 0% 100%);
 }
