--- a/scss/1-abstracts/_variables.scss
+++ b/scss/1-abstracts/_variables.scss
@@ -1,4 +1,13 @@
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
-$color-blue-dark: blue;
+
+// COLORS
+$color-blood-red: #660708; // Primary Color
+$color-imperial-red: #e5383b; // Tertiary Color
+
+$color-white: #ffffff;
+$color-cultured: #f5f3f4;
+
+$color-rich-black: #0b090a;
+$color-eerie-black: #161a1d;
