--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import "3-base/typography";
 
 // 4. Layout-related sections
+@import "4-layout/container";
 @import "4-layout/grid";
 @import "4-layout/navigation";
 @import "4-layout/header";
