Updated header section

--- a/scss/1-abstracts/_variables.scss
+++ b/scss/1-abstracts/_variables.scss
@@ -10,4 +10,4 @@ $color-white: #ffffff;
 $color-cultured: #f5f3f4;
 
 $color-rich-black: #0b090a;
-$color-eerie-black: #161a1d;
+$color-eerie-black: #161a1d; // Default Text Color
