--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,39 +1,37 @@
 @charset "UTF-8";
 
-// 1. Configuration and helpers
+// 1. Abtracts
 @import "1-abstracts/variables";
 @import "1-abstracts/functions";
 @import "1-abstracts/mixins";
+@import "1-abstracts/placeholders";
 
-// 2. Vendors
-@import "2-vendors/normalize";
-@import "2-vendors/boostrap";
+// 2. Tools
+@import "2-tools/normalize";
+@import "2-tools/animation";
 
-// 3. Base stuff
-@import "3-base/base";
-@import "3-base/fonts";
-@import "3-base/helpers";
+// 3. Base
 @import "3-base/reset";
+@import "3-base/base";
+@import "3-base/helpers";
 @import "3-base/typography";
 
-// 4. Layout-related sections
-@import "4-layout/container";
-@import "4-layout/grid";
-@import "4-layout/navigation";
-@import "4-layout/header";
-@import "4-layout/sidebar";
-@import "4-layout/footer";
+// 4. Components
+@import "4-components/buttons";
+@import "4-components/links";
+@import "4-components/cards";
+@import "4-components/carousels";
 
-// 5. Components
-@import "5-components/button";
-@import "5-components/card";
-@import "5-components/carousel";
+// 5. Layouts
+@import "5-layouts/grid";
+@import "5-layouts/navigation";
+@import "5-layouts/header";
+@import "5-layouts/sidebar";
+@import "5-layouts/forms";
+@import "5-layouts/footer";
 
-// 6. Page-specific styles
+// 6. Pages
 @import "6-pages/home";
 @import "6-pages/landing-page";
 @import "6-pages/apis";
 @import "6-pages/crud";
-
-// 7. Themes
-@import "7-themes/default";
