--- a/scss/3-base/_base.scss
+++ b/scss/3-base/_base.scss
@@ -8,7 +8,6 @@ html {
 }
 
 body {
-  font-family: "Lato", sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.5;
+  margin: 2rem 2rem 0 2rem;
+  color: $color-eerie-black;
 }
