--- a/scss/3-base/_helpers.scss
+++ b/scss/3-base/_helpers.scss
@@ -1,3 +1,12 @@
 // -----------------------------------------------------------------------------
 // This file contains CSS helper classes.
 // -----------------------------------------------------------------------------
+
+// Defining strong tag weight
+.span--strong {
+  font-weight: 900;
+}
+
+.right--margin {
+  margin-right: 1.8rem;
+}
