--- a/scss/3-base/_typography.scss
+++ b/scss/3-base/_typography.scss
@@ -2,6 +2,10 @@
  * Basic typography style for copy text
  */
 
-body {
-  color: $color-white;
+a,
+h1 {
+  font-family: "Lato", sans-serif;
+  font-size: 2.4rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
 }
