Created a new navigation layout. Added a background image and positioned header content relative to body tag and centered the entire div box

--- a/scss/1-abstracts/_variables.scss
+++ b/scss/1-abstracts/_variables.scss
@@ -4,6 +4,8 @@
 
 // COLORS
 $color-blood-red: #660708; // Primary Color
+$color-ruby-red: #a4161a;
+$color-carnelian: #ba181b;
 $color-imperial-red: #e5383b; // Tertiary Color
 
 $color-white: #ffffff;
