--- a/scss/4-components/_buttons.scss
+++ b/scss/4-components/_buttons.scss
@@ -7,7 +7,6 @@
   &:link,
   &:visited {
     display: inline-block;
-    font-family: "Arizona", cursive;
     border-radius: 10rem;
     padding: 1.5rem 4rem;
     font-size: 2rem;
@@ -15,23 +14,35 @@
     cursor: pointer;
     transition: all 0.2s;
     width: auto;
+    backface-visibility: hidden;
   }
 
   // Home Page Header Buttons
   &__header--1 {
     color: $color-eerie-black;
     background-color: $color-white;
+    animation: dropdown--slide 2s 1.3s;
+    animation-fill-mode: backwards;
   }
 
-  &__header--2:link {
-    color: $color-white;
-    background-color: $color-blood-red;
-    text-transform: lowercase;
+  &__header--2 {
+    color: $color-imperial-red;
+    border: 0.2rem solid $color-imperial-red;
+    text-transform: lowercase !important;
+    animation: dropdown--slide 2s 1.6s;
+    animation-fill-mode: backwards;
+
+    &:hover {
+      transform: translateY(0) !important;
+      box-shadow: none;
+      background-color: $color-imperial-red;
+      color: $color-white;
+    }
   }
 
   // Button(s) Hover Effects
   &:hover {
-    transform: translateY(-0.3rem);
+    transform: translateY(-0.4rem);
     box-shadow: 0 1rem 2rem rgba($color-eerie-black, 0.4);
   }
 
