--- a/css/main.css
+++ b/css/main.css
@@ -342,6 +342,32 @@ template {
   display: none;
 }
 
+@-webkit-keyframes dropdown--slide {
+  0% {
+    -webkit-transform: translateY(-4.8rem);
+            transform: translateY(-4.8rem);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+    opacity: 1;
+  }
+}
+
+@keyframes dropdown--slide {
+  0% {
+    -webkit-transform: translateY(-4.8rem);
+            transform: translateY(-4.8rem);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+    opacity: 1;
+  }
+}
+
 /*** The new CSS Reset - version 1.4.2 (last updated 30.11.2021) ***/
 /*
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
@@ -396,8 +422,12 @@ html {
 }
 
 body {
-  margin: 2rem 2rem 0 2rem;
   color: #161a1d;
+  position: relative;
+}
+
+main {
+  margin: 0 3rem;
 }
 
 .span--strong {
@@ -412,16 +442,15 @@ body {
  * Basic typography style for copy text
  */
 a,
-h1 {
+h1,
+h2 {
   font-family: "Lato", sans-serif;
   font-size: 2.4rem;
-  font-weight: 400;
   letter-spacing: 0.1rem;
 }
 
 .btn, .btn:link, .btn:visited {
   display: inline-block;
-  font-family: "Arizona", cursive;
   border-radius: 10rem;
   padding: 1.5rem 4rem;
   font-size: 2rem;
@@ -430,22 +459,41 @@ h1 {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   width: auto;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .btn__header--1 {
   color: #161a1d;
   background-color: #ffffff;
+  -webkit-animation: dropdown--slide 2s 1.3s;
+          animation: dropdown--slide 2s 1.3s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
 }
 
-.btn__header--2:link {
+.btn__header--2 {
+  color: #e5383b;
+  border: 0.2rem solid #e5383b;
+  text-transform: lowercase !important;
+  -webkit-animation: dropdown--slide 2s 1.6s;
+          animation: dropdown--slide 2s 1.6s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+.btn__header--2:hover {
+  -webkit-transform: translateY(0) !important;
+          transform: translateY(0) !important;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: #e5383b;
   color: #ffffff;
-  background-color: #660708;
-  text-transform: lowercase;
 }
 
 .btn:hover {
-  -webkit-transform: translateY(-0.3rem);
-          transform: translateY(-0.3rem);
+  -webkit-transform: translateY(-0.4rem);
+          transform: translateY(-0.4rem);
   -webkit-box-shadow: 0 1rem 2rem rgba(22, 26, 29, 0.4);
           box-shadow: 0 1rem 2rem rgba(22, 26, 29, 0.4);
 }
@@ -458,23 +506,76 @@ h1 {
           box-shadow: 0 0.5rem 1rem rgba(22, 26, 29, 0.2);
 }
 
-.header {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(102, 7, 8, 0.9)), to(rgba(229, 56, 59, 0.5))), url("/img/background-img.jpg");
-  background-image: linear-gradient(to right bottom, rgba(102, 7, 8, 0.9), rgba(229, 56, 59, 0.5)), url("/img/background-img.jpg");
+.navigation__item {
+  cursor: pointer;
+}
+
+.navigation__link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0.4rem;
+  background-color: #e5383b;
+  -webkit-transition: width 0.3s ease-in;
+  transition: width 0.3s ease-in;
+}
+
+.navigation__link:hover::after {
+  width: 100%;
+}
+
+.navigation {
+  color: #ffffff;
+  position: relative;
+}
+
+.navigation__background-img {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(11, 9, 10, 0.9)), to(rgba(22, 26, 29, 0.9))), url("/img/background-img.jpg");
+  background-image: linear-gradient(to right bottom, rgba(11, 9, 10, 0.9), rgba(22, 26, 29, 0.9)), url("/img/background-img.jpg");
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 96vh;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-  position: relative;
+}
+
+.navigation__nav {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 2rem 3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.navigation__nav .logo__text {
+  font-size: 3rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.navigation__nav .logo__text-span {
+  color: #e5383b;
+}
+
+.navigation__nav .navigation__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 3rem;
 }
 
 .header__content {
   color: #ffffff;
-  top: 40%;
-  left: 50%;
   position: absolute;
+  top: 50%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   text-align: center;
@@ -486,10 +587,11 @@ h1 {
 
 .heading__primary--span-1 {
   display: block;
-  font-family: "Arizona", cursive;
-  font-size: 5.4rem;
+  font-size: 5.8rem;
   font-weight: 600;
-  margin-bottom: 3.4rem;
+  letter-spacing: 0.6rem;
+  color: #e5383b;
+  margin-bottom: 3rem;
 }
 
 .heading__primary--span-2 {
@@ -497,4 +599,15 @@ h1 {
   font-size: 2.8rem;
   letter-spacing: 0.4rem;
   margin-bottom: 0.2rem;
+  -webkit-animation: dropdown--slide 2s 1s ease;
+          animation: dropdown--slide 2s 1s ease;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+.heading__primary-text {
+  -webkit-animation: dropdown--slide 2s 1s ease;
+          animation: dropdown--slide 2s 1s ease;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
 }
