--- a/scss/3-base/_base.scss
+++ b/scss/3-base/_base.scss
@@ -8,6 +8,10 @@ html {
 }
 
 body {
-  margin: 2rem 2rem 0 2rem;
   color: $color-eerie-black;
+  position: relative;
+}
+
+main {
+  margin: 0 3rem;
 }
