--- a/scss/3-base/_typography.scss
+++ b/scss/3-base/_typography.scss
@@ -3,9 +3,9 @@
  */
 
 a,
-h1 {
+h1,
+h2 {
   font-family: "Lato", sans-serif;
   font-size: 2.4rem;
-  font-weight: 400;
   letter-spacing: 0.1rem;
 }
