--- a/scss/5-layouts/_header.scss
+++ b/scss/5-layouts/_header.scss
@@ -2,31 +2,13 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 
-.header {
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($color-blood-red, 0.9),
-      rgba($color-imperial-red, 0.5)
-    ),
-    url("/img/background-img.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 96vh;
-
-  // Clip image using polygon
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-  position: relative;
-
-  &__content {
-    color: $color-white;
-    // Center header contents
-    top: 40%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
+.header__content {
+  color: $color-white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading__primary {
@@ -35,10 +17,11 @@
 
   &--span-1 {
     display: block;
-    font-family: "Arizona", cursive;
-    font-size: 5.4rem;
+    font-size: 5.8rem;
     font-weight: 600;
-    margin-bottom: 3.4rem;
+    letter-spacing: 0.6rem;
+    color: $color-imperial-red;
+    margin-bottom: 3rem;
   }
 
   &--span-2 {
@@ -46,5 +29,14 @@
     font-size: 2.8rem;
     letter-spacing: 0.4rem;
     margin-bottom: 0.2rem;
+    // Add slide animation
+    animation: dropdown--slide 2s 1s ease;
+    animation-fill-mode: backwards; // Set 0% {...} animation effects
+  }
+
+  &-text {
+    // Adding slide animation
+    animation: dropdown--slide 2s 1s ease;
+    animation-fill-mode: backwards; // Set 0% {...} animation effects
   }
 }
