--- a/scss/3-base/_helpers.scss
+++ b/scss/3-base/_helpers.scss
@@ -10,3 +10,11 @@
 .right--margin {
   margin-right: 1.8rem;
 }
+
+.red--text {
+  color: $color-imperial-red;
+}
+
+.bottom--margin-small {
+  margin-bottom: 0.6rem;
+}
