--- a/scss/4-components/_buttons.scss
+++ b/scss/4-components/_buttons.scss
@@ -2,6 +2,9 @@
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
 
+// ***************************************************************************
+// HOME PAGE BUTTONS
+// ****************************************************************************
 .btn {
   &,
   &:link,
@@ -52,3 +55,7 @@
     box-shadow: 0 0.5rem 1rem rgba($color-eerie-black, 0.2);
   }
 }
+
+// ***************************************************************************
+// END OF SECTION
+// ****************************************************************************
