--- a/scss/6-pages/_home.scss
+++ b/scss/6-pages/_home.scss
@@ -1,3 +1,12 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+
+/******************************************************************************
+PORTFOLIO SECTION
+*******************************************************************************/
+.section__portfolio {
+  margin-top: 8rem;
+
+  height: 150rem;
+}
