--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 
 // 4. Components
 @import "4-components/buttons";
+@import "4-components/headings";
 @import "4-components/links";
 @import "4-components/cards";
 @import "4-components/carousels";
