--- a/scss/3-base/_typography.scss
+++ b/scss/3-base/_typography.scss
@@ -5,7 +5,7 @@
 a,
 h1,
 h2 {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "ubuntu", sans-serif;
   font-size: 2.4rem;
   letter-spacing: 0.1rem;
 }
