added card.scss components to index.html portfolio section

--- a/scss/1-abstracts/_variables.scss
+++ b/scss/1-abstracts/_variables.scss
@@ -13,3 +13,6 @@ $color-cultured: #f5f3f4;
 
 $color-rich-black: #0b090a;
 $color-eerie-black: #161a1d; // Default Text Color
+
+$color-secondary-light: #fdd871;
+$color-secondary-dark: #ff8f53;
