--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ body {
 }
 
 main {
-  margin: 0 3rem;
+  margin: 0 8rem;
 }
 
 .span--strong {
@@ -443,6 +443,10 @@ main {
 
 .bottom--margin-small {
   margin-bottom: 0.6rem;
+}
+
+.bottom--margin-medium {
+  margin-bottom: 6rem;
 }
 
 /**
@@ -515,7 +519,7 @@ h2 {
 
 .heading__secondary {
   font-family: "Lato", "ubuntu", sans-serif;
-  font-size: 4.8rem;
+  font-size: 4.6rem;
   font-weight: 700;
 }
 
@@ -545,8 +549,8 @@ h2 {
 
 .card {
   background-color: transparent;
-  width: 300px;
-  height: 300px;
+  width: 35rem;
+  height: 45rem;
   -webkit-perspective: 1000px;
           perspective: 1000px;
 }
@@ -567,8 +571,8 @@ h2 {
   transition: transform 0.6s, -webkit-transform 0.6s;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(22, 26, 29, 0.15);
+          box-shadow: 0 1.5rem 4rem rgba(22, 26, 29, 0.15);
 }
 
 .inner__card-front, .inner__card-back {
@@ -580,7 +584,7 @@ h2 {
 }
 
 .inner__card-front {
-  background-color: #bbb;
+  background-color: #ffffff;
   color: black;
 }
 
@@ -603,8 +607,6 @@ h2 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
 }
 
 .navigation__nav {
@@ -615,7 +617,7 @@ h2 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 2rem 3rem;
+  padding: 3rem 8rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -688,5 +690,35 @@ PORTFOLIO SECTION
 *******************************************************************************/
 .section__portfolio {
   margin-top: 8rem;
-  height: 150rem;
+  text-align: center;
+  height: 100rem;
+}
+
+.portfolio__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 3rem;
+}
+
+.inner__card-front {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 25rem;
+}
+
+.inner__card-front--1 {
+  background-image: url("/img/portfolio/landing-pages.jpg");
+}
+
+.inner__card-front--2 {
+  background-image: url("/img/portfolio/backend-langs.jpg");
+}
+
+.inner__card-front--3 {
+  background-image: url("/img/portfolio/apis.jpg");
 }
