--- a/scss/4-components/_cards.scss
+++ b/scss/4-components/_cards.scss
@@ -7,8 +7,8 @@
 // ****************************************************************************
 .card {
   background-color: transparent;
-  width: 300px;
-  height: 300px;
+  width: 35rem;
+  height: 45rem;
   perspective: 1000px;
 
   &:hover .inner__card {
@@ -23,7 +23,7 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1.5rem 4rem rgba($color-eerie-black, 0.15);
 
   &-front,
   &-back {
@@ -35,7 +35,7 @@
   }
 
   &-front {
-    background-color: #bbb;
+    background-color: $color-white;
     color: black;
   }
 
