--- a/scss/5-layouts/_navigation.scss
+++ b/scss/5-layouts/_navigation.scss
@@ -18,7 +18,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     // // Clip image using polygon
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+    // clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
   }
 
   &__nav {
@@ -26,8 +26,7 @@
     display: flex;
     justify-content: space-between;
     // Adding padding to the navigation
-    padding: 2rem 3rem;
-
+    padding: 3rem 8rem;
     // Position Navigation
     position: absolute;
     top: 0;
