updated prortfolio section

--- a/scss/1-abstracts/_variables.scss
+++ b/scss/1-abstracts/_variables.scss
@@ -16,3 +16,26 @@ $color-eerie-black: #161a1d; // Default Text Color
 
 $color-secondary-light: #fdd871;
 $color-secondary-dark: #ff8f53;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+$color-grey-dark: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
+$color-white: #fff;
+$color-black: #000;
+
+// CARD COLORS
+$color-tart-orange: #ff4747;
+$color-bittersweet: #ff6c6c;
+
+$color-oxford-blue: #031d44;
+$color-indigo-dye: #04395e;
+
+$color-deep-saffron: #fb9d39;
+$color-yellow-orange: #feb648;
+
+$color-space-cadet: #313364;
+$color-dark-blue-grey: #5f6297;
