--- a/css/main.css
+++ b/css/main.css
@@ -423,6 +423,8 @@ html {
 
 body {
   color: #161a1d;
+  margin: 0 auto;
+  max-width: 140rem;
 }
 
 main {
@@ -454,7 +456,12 @@ main {
  */
 a,
 h1,
-h2 {
+h2,
+h3,
+h4,
+ul,
+ol,
+li {
   font-family: "Lato", "ubuntu", sans-serif;
   font-size: 2.4rem;
   letter-spacing: 0.1rem;
@@ -476,7 +483,7 @@ h2 {
 
 .btn__header--1 {
   color: #161a1d;
-  background-color: #ffffff;
+  background-color: #fff;
   -webkit-animation: dropdown--slide 2s 1.3s;
           animation: dropdown--slide 2s 1.3s;
   -webkit-animation-fill-mode: backwards;
@@ -499,7 +506,7 @@ h2 {
   -webkit-box-shadow: none;
           box-shadow: none;
   background-color: #e5383b;
-  color: #ffffff;
+  color: #fff;
 }
 
 .btn:hover {
@@ -550,9 +557,10 @@ h2 {
 .card {
   background-color: transparent;
   width: 35rem;
-  height: 45rem;
+  height: 50rem;
   -webkit-perspective: 1000px;
           perspective: 1000px;
+  border-radius: 0.3rem;
 }
 
 .card:hover .inner__card {
@@ -584,20 +592,20 @@ h2 {
 }
 
 .inner__card-front {
-  background-color: #ffffff;
+  background-color: #fff;
   color: black;
 }
 
 .inner__card-back {
-  background-color: #2980b9;
   color: white;
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
 
 .navigation {
-  color: #ffffff;
+  color: #fff;
   position: relative;
+  overflow: hidden;
 }
 
 .navigation__background-img {
@@ -641,7 +649,7 @@ h2 {
 }
 
 .header__content {
-  color: #ffffff;
+  color: #fff;
   position: absolute;
   top: 47%;
   left: 50%;
@@ -705,20 +713,91 @@ PORTFOLIO SECTION
 }
 
 .inner__card-front {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 25rem;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 0.3rem;
 }
 
-.inner__card-front--1 {
+.card__picture {
+  width: 100%;
+  height: 19rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.card__picture--1 {
   background-image: url("/img/portfolio/landing-pages.jpg");
 }
 
-.inner__card-front--2 {
-  background-image: url("/img/portfolio/backend-langs.jpg");
+.card__picture--2 {
+  background-image: url("/img/portfolio/Set_of_programmers_02_02.jpg");
 }
 
-.inner__card-front--3 {
+.card__picture--3 {
   background-image: url("/img/portfolio/apis.jpg");
+}
+
+.card__heading {
+  font-size: 2.8rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  width: 100%;
+}
+
+.card__heading-span {
+  display: block;
+  padding: 1rem 1.5rem;
+}
+
+.card__heading-span--1 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 71, 71, 0.85)), to(rgba(255, 108, 108, 0.85)));
+  background-image: linear-gradient(to right bottom, rgba(255, 71, 71, 0.85), rgba(255, 108, 108, 0.85));
+}
+
+.card__heading-span--2 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(49, 51, 100, 0.85)), to(rgba(95, 98, 151, 0.85)));
+  background-image: linear-gradient(to right bottom, rgba(49, 51, 100, 0.85), rgba(95, 98, 151, 0.85));
+}
+
+.card__heading-span--3 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#fb9d39), to(rgba(254, 182, 72, 0.85)));
+  background-image: linear-gradient(to right bottom, #fb9d39, rgba(254, 182, 72, 0.85));
+}
+
+.card__details {
+  padding: 2rem;
+}
+
+.card__details ul {
+  list-style: none;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.card__details ul li {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 1rem;
+}
+
+.card__details ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+
+.inner__card-back--1 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 71, 71, 0.4)), to(#ff6c6c));
+  background-image: linear-gradient(to right bottom, rgba(255, 71, 71, 0.4), #ff6c6c);
+}
+
+.inner__card-back--2 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(49, 51, 100, 0.4)), to(#5f6297));
+  background-image: linear-gradient(to right bottom, rgba(49, 51, 100, 0.4), #5f6297);
+}
+
+.inner__card-back--3 {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(251, 157, 57, 0.4)), to(#feb648));
+  background-image: linear-gradient(to right bottom, rgba(251, 157, 57, 0.4), #feb648);
 }
