--- a/scss/3-base/_typography.scss
+++ b/scss/3-base/_typography.scss
@@ -4,7 +4,12 @@
 
 a,
 h1,
-h2 {
+h2,
+h3,
+h4,
+ul,
+ol,
+li {
   font-family: "Lato", "ubuntu", sans-serif;
   font-size: 2.4rem;
   letter-spacing: 0.1rem;
