updated background image links

--- a/css/main.css
+++ b/css/main.css
@@ -609,8 +609,8 @@ li {
 }
 
 .navigation__background-img {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(11, 9, 10, 0.9)), to(rgba(22, 26, 29, 0.9))), url("/img/background-img.jpg");
-  background-image: linear-gradient(to right bottom, rgba(11, 9, 10, 0.9), rgba(22, 26, 29, 0.9)), url("/img/background-img.jpg");
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(11, 9, 10, 0.9)), to(rgba(22, 26, 29, 0.9))), url("../img/background-img.jpg");
+  background-image: linear-gradient(to right bottom, rgba(11, 9, 10, 0.9), rgba(22, 26, 29, 0.9)), url("../img/background-img.jpg");
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
@@ -727,15 +727,15 @@ PORTFOLIO SECTION
 }
 
 .card__picture--1 {
-  background-image: url("/img/portfolio/landing-pages.jpg");
+  background-image: url("../img/portfolio/landing-pages.jpg");
 }
 
 .card__picture--2 {
-  background-image: url("/img/portfolio/Set_of_programmers_02_02.jpg");
+  background-image: url("../img/portfolio/Set_of_programmers_02_02.jpg");
 }
 
 .card__picture--3 {
-  background-image: url("/img/portfolio/apis.jpg");
+  background-image: url("../img/portfolio/apis.jpg");
 }
 
 .card__heading {
