--- a/scss/5-layouts/_navigation.scss
+++ b/scss/5-layouts/_navigation.scss
@@ -13,7 +13,7 @@
         rgba($color-rich-black, 0.9),
         rgba($color-eerie-black, 0.9)
       ),
-      url("/img/background-img.jpg");
+      url("../img/background-img.jpg");
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
