--- a/scss/6-pages/_home.scss
+++ b/scss/6-pages/_home.scss
@@ -32,15 +32,15 @@ PORTFOLIO SECTION
   background-position: center center;
 
   &--1 {
-    background-image: url("/img/portfolio/landing-pages.jpg");
+    background-image: url("../img/portfolio/landing-pages.jpg");
   }
 
   &--2 {
-    background-image: url("/img/portfolio/Set_of_programmers_02_02.jpg");
+    background-image: url("../img/portfolio/Set_of_programmers_02_02.jpg");
   }
 
   &--3 {
-    background-image: url("/img/portfolio/apis.jpg");
+    background-image: url("../img/portfolio/apis.jpg");
   }
 }
 
